5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1859_3209.log
== TEST (2019-06-26 14:09:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:"x)
print("o total do setor 2 e:"y)
print(a)
print(b)
-- ERROR:
File "XXXX", line 7
    print("o total do setor 1 e:"x)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:10:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:10:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:11:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print(a)
print(b)
-- EXECUTION TIME:
0.908196
-- TEST CASE 1:
---- input:
3
4
10.0,20.5,30.5,40.5
2.5,10.0,4.5,6.5
3.5,11.5,22.0,33.5
---- correct output:
O total do setor 1  e: 101.5 reais
O total do setor 2  e: 23.5 reais
O total do setor 3  e: 70.5 reais
[[10.  20.5 30.5 40.5]
 [ 2.5 10.   4.5  6.5]
 [ 3.5 11.5 22.  33.5]]
---- user output:
o total do setor 1 e: 3
o total do setor 2 e: 4
3
4
-- TEST CASE 2:
---- input:
2
5
5.5,6.5,7.5,5.8,5.9
100.2,200.2,300.2,400.2,500.2
---- correct output:
O total do setor 1  e: 31.2 reais
O total do setor 2  e: 1501.0 reais
[[  5.5   6.5   7.5   5.8   5.9]
 [100.2 200.2 300.2 400.2 500.2]]
---- user output:
o total do setor 1 e: 2
o total do setor 2 e: 5
2
5
-- TEST CASE 3:
---- input:
5
2
10.5,20.5
30.5,40.5
100.5,200.5
300.5,400.5
500.5,600.5
---- correct output:
O total do setor 1  e: 31.0 reais
O total do setor 2  e: 71.0 reais
O total do setor 3  e: 301.0 reais
O total do setor 4  e: 701.0 reais
O total do setor 5  e: 1101.0 reais
[[ 10.5  20.5]
 [ 30.5  40.5]
 [100.5 200.5]
 [300.5 400.5]
 [500.5 600.5]]
---- user output:
o total do setor 1 e: 5
o total do setor 2 e: 2
5
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:11:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print([a])
print([b])
-- EXECUTION TIME:
1.20408
-- TEST CASE 1:
---- input:
3
4
10.0,20.5,30.5,40.5
2.5,10.0,4.5,6.5
3.5,11.5,22.0,33.5
---- correct output:
O total do setor 1  e: 101.5 reais
O total do setor 2  e: 23.5 reais
O total do setor 3  e: 70.5 reais
[[10.  20.5 30.5 40.5]
 [ 2.5 10.   4.5  6.5]
 [ 3.5 11.5 22.  33.5]]
---- user output:
o total do setor 1 e: 3
o total do setor 2 e: 4
[array(3)]
[array(4)]
-- TEST CASE 2:
---- input:
2
5
5.5,6.5,7.5,5.8,5.9
100.2,200.2,300.2,400.2,500.2
---- correct output:
O total do setor 1  e: 31.2 reais
O total do setor 2  e: 1501.0 reais
[[  5.5   6.5   7.5   5.8   5.9]
 [100.2 200.2 300.2 400.2 500.2]]
---- user output:
o total do setor 1 e: 2
o total do setor 2 e: 5
[array(2)]
[array(5)]
-- TEST CASE 3:
---- input:
5
2
10.5,20.5
30.5,40.5
100.5,200.5
300.5,400.5
500.5,600.5
---- correct output:
O total do setor 1  e: 31.0 reais
O total do setor 2  e: 71.0 reais
O total do setor 3  e: 301.0 reais
O total do setor 4  e: 701.0 reais
O total do setor 5  e: 1101.0 reais
[[ 10.5  20.5]
 [ 30.5  40.5]
 [100.5 200.5]
 [300.5 400.5]
 [500.5 600.5]]
---- user output:
o total do setor 1 e: 5
o total do setor 2 e: 2
[array(5)]
[array(2)]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:11:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print([a])
print([b])
-- EXECUTION TIME:
1.13203
-- TEST CASE 1:
---- input:
3
4
10.0,20.5,30.5,40.5
2.5,10.0,4.5,6.5
3.5,11.5,22.0,33.5
---- correct output:
O total do setor 1  e: 101.5 reais
O total do setor 2  e: 23.5 reais
O total do setor 3  e: 70.5 reais
[[10.  20.5 30.5 40.5]
 [ 2.5 10.   4.5  6.5]
 [ 3.5 11.5 22.  33.5]]
---- user output:
o total do setor 1 e: 3
o total do setor 2 e: 4
[array(3)]
[array(4)]
-- TEST CASE 2:
---- input:
2
5
5.5,6.5,7.5,5.8,5.9
100.2,200.2,300.2,400.2,500.2
---- correct output:
O total do setor 1  e: 31.2 reais
O total do setor 2  e: 1501.0 reais
[[  5.5   6.5   7.5   5.8   5.9]
 [100.2 200.2 300.2 400.2 500.2]]
---- user output:
o total do setor 1 e: 2
o total do setor 2 e: 5
[array(2)]
[array(5)]
-- TEST CASE 3:
---- input:
5
2
10.5,20.5
30.5,40.5
100.5,200.5
300.5,400.5
500.5,600.5
---- correct output:
O total do setor 1  e: 31.0 reais
O total do setor 2  e: 71.0 reais
O total do setor 3  e: 301.0 reais
O total do setor 4  e: 701.0 reais
O total do setor 5  e: 1101.0 reais
[[ 10.5  20.5]
 [ 30.5  40.5]
 [100.5 200.5]
 [300.5 400.5]
 [500.5 600.5]]
---- user output:
o total do setor 1 e: 5
o total do setor 2 e: 2
[array(5)]
[array(2)]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:12:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print([a])
print([b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:17:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

while(a>0):
	a=array(eval(input("")))
	x=sum(a)
print("o total do setor 1 e:",x)
print([a])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=1
while(a>0):
	a=array(eval(input("")))
	x=sum(a)
print("o total do setor 1 e:",x)
print([a])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=1
while(a>0):
	a=array(eval(input("")))
	x=sum(a)
print("o total do setor 1 e:",x)
print([a])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=a
while(a>0):
	a=array(eval(input("")))
	x=sum(a)
print("o total do setor 1 e:",x)
print([a])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:19:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
while(a>0):
	a=array(eval(input("")))
	x=sum(a)
print("o total do setor 1 e:",x)
print([a])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:20:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print([a])
print([b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:20:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print([a])
print([b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:21:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print([a])
print([b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:22:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print[[a]]
print[[b]]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:24:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("")))
b=array(eval(input("")))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print("[",a,"]")
print("[",b,"]")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:25:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input((""))))
b=array(eval(input((""))))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:26:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input((""))))
b=array(eval(input((""))))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print(a)
print(b)
-- EXECUTION TIME:
0.74596
-- TEST CASE 1:
---- input:
3
4
10.0,20.5,30.5,40.5
2.5,10.0,4.5,6.5
3.5,11.5,22.0,33.5
---- correct output:
O total do setor 1  e: 101.5 reais
O total do setor 2  e: 23.5 reais
O total do setor 3  e: 70.5 reais
[[10.  20.5 30.5 40.5]
 [ 2.5 10.   4.5  6.5]
 [ 3.5 11.5 22.  33.5]]
---- user output:
o total do setor 1 e: 3
o total do setor 2 e: 4
3
4
-- TEST CASE 2:
---- input:
2
5
5.5,6.5,7.5,5.8,5.9
100.2,200.2,300.2,400.2,500.2
---- correct output:
O total do setor 1  e: 31.2 reais
O total do setor 2  e: 1501.0 reais
[[  5.5   6.5   7.5   5.8   5.9]
 [100.2 200.2 300.2 400.2 500.2]]
---- user output:
o total do setor 1 e: 2
o total do setor 2 e: 5
2
5
-- TEST CASE 3:
---- input:
5
2
10.5,20.5
30.5,40.5
100.5,200.5
300.5,400.5
500.5,600.5
---- correct output:
O total do setor 1  e: 31.0 reais
O total do setor 2  e: 71.0 reais
O total do setor 3  e: 301.0 reais
O total do setor 4  e: 701.0 reais
O total do setor 5  e: 1101.0 reais
[[ 10.5  20.5]
 [ 30.5  40.5]
 [100.5 200.5]
 [300.5 400.5]
 [500.5 600.5]]
---- user output:
o total do setor 1 e: 5
o total do setor 2 e: 2
5
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input((""))))
b=array(eval(input((""))))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input((""))))
b=array(eval(input((""))))
x=sum(a)
y=sum(b)
print("o total do setor 1 e:",x)
print("o total do setor 2 e:",y)
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
